<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/distance"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:entries="@array/distances"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/style"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/distance"
        android:layout_marginEnd="29dp"
        android:entries="@array/styles"
        app:layout_constraintStart_toEndOf="@+id/distance"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/distance"
        android:layout_alignTop="@+id/course"
        android:textOff="@string/gender_off"
        android:textOn="@string/gender_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance" />

    <ToggleButton
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:checked="false"
        android:textOff="@string/course_off"
        android:textOn="@string/course_on"
        app:layout_constraintStart_toEndOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/style" />

    <Button
        android:id="@+id/settime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/distance"
        android:layout_marginTop="189dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <TextView
        android:id="@+id/time"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/style"
        android:layout_marginTop="202dp" />

</RelativeLayout>